# Job-Application-List

./: .run.sh.swp  Cargo.toml  PRESENTATION_LINK  README.md  application.csv  display.sql  drop.sql  jobs_data.db  jobs_query.sql  query.sql  run.sh  test_application.csv
output/: file.txt
src/: application.rs  csv_reader.rs  database_methods.rs  job.rs  list.rs  main.rs  server.rs
static/: scripts.js  style.css
templates/: add.html  home.html  jobs.html  rem.html
