[package]
name = "list"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
csv = "1.3.1"
run = "0.1.0"
rusqlite = "0.33.0"
actix-web = "4" # Resource: https://actix.rs/docs/application
# From creates.io:
#sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
#tokio = { version = "1", features = ["full"] }
