[package]
name = "list"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
csv = "1.3.1"
run = "0.1.0"

rusqlite = "0.33.0" # To use sql in rust:
actix-web = "4" # Resource: https://actix.rs/docs/application

# For logging on the server-side:
env_logger = "0.10"
log = "0.4" 

# For implementing html and extracting route files in rust:
actix-files = "0.6"
tera = "1.16"

# For passing struct objects into tera:
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# From creates.io:
#sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
#tokio = { version = "1", features = ["full"] }
